--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
           </div>
           <div class="hero-image">
             <div class="image-placeholder">
-              <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=1974&auto=format&fit=crop"
-                alt="Pawan">
+              <img src="/pawan-hero.jpg" alt="Pawan">
             </div>
           </div>
         </div>
